crates/talkbank-derive/tests/ui/fail_span_shift_on_union.rs
use talkbank_derive::SpanShift;

#[derive(SpanShift)]
union BadUnion {
    a: i32,
    b: f32,
}

fn main() {}
